--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Zen_DB": "Server=.;Database=E-Commerce-Zen_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Zen_DB": "Server=localhost\\SQLEXPRESS;Database=E-Commerce-Zen_DB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "THIS_IS_MY_SUPER_SECRET_KEY_12345",
